# solaire

./: .gitignore  CMakeLists.txt
.claude/: BUG_FIXES_2025-11-15.md  CODE_VERIFICATION_2025-11-15.md  CURRENT_STATUS.md  FAITHFUL_PANHARMONIUM_PLAN.md  NEXT_STEPS.md  RULE_ENFORCEMENT.md  SESSION_HANDOFF.md  VIOLATION_SUMMARY.md  instructions.md  juce_critical_knowledge.md  juce_spectral_effects_patterns.md  juce_spectral_processing.md
.claude/commands/: start.md
Source/: OscillatorBank.h  PanharmoniumEngine.cpp  PanharmoniumEngine.h  PartialTracking.h  PluginProcessor.cpp  PluginProcessor.h  SolaireEngine.cpp  SolaireEngine.h  SpectralPeakExtraction.h
